# evilly-evil-villains

./: .gitignore  .hidden  CMakeLists.txt  Makefile  Makefile-translations  README.md  eev.cbp  steam_appid.txt
api/ai/: ai.tex  minted.sty
api/scripting/: scripting.tex
cmake/: Configure.cmake  Distribute.cmake  FindLibIntl.cmake  FindSFML.cmake  LibFindMacros.cmake  LoadEEVDependencies.cmake
config/: audio.xml  display.xml  sound.xml
cover/: CMakeLists.txt
docs/: .hidden  CMakeLists.txt  Makefile  doxyfile.in  doxygen.css  footer.html  header.html  mainpage.hpp
ext/box2d/: CMakeLists.txt
ext/box2d/Collision/: b2TimeOfImpact.cpp
ext/box2d/Dynamics/: b2ContactManager.cpp
ext/box2d/Dynamics/Contacts/: b2ContactSolver.cpp
ext/box2d/Dynamics/Joints/: b2GearJoint.cpp  b2PrismaticJoint.cpp
ext/ltbl/: CMakeLists.txt  Math.cpp
ext/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
ext/sfml/: CMakeLists.txt
ext/sfml/cmake/: Macros.cmake
ext/sfml/cmake/Modules/: FindUDev.cmake
ext/sfml/src/SFML/: CMakeLists.txt
ext/sfml/src/SFML/Audio/: CMakeLists.txt
ext/sfml/src/SFML/Graphics/: CMakeLists.txt  Font.cpp  GLExtensions.hpp  RenderTarget.cpp  RenderTexture.cpp  RenderTextureImpl.hpp  RenderTextureImplDefault.cpp  RenderTextureImplDefault.hpp  RenderTextureImplFBO.cpp  RenderTextureImplFBO.hpp  Shader.cpp  Texture.cpp
ext/sfml/src/SFML/Main/: CMakeLists.txt  MainWin32.cpp
ext/sfml/src/SFML/Network/: CMakeLists.txt
ext/sfml/src/SFML/System/: CMakeLists.txt
ext/sfml/src/SFML/Window/: CMakeLists.txt  WindowImpl.cpp
ext/sfml/src/SFML/Window/Unix/: GlxContext.cpp  InputImpl.cpp  WindowImplX11.cpp
ext/sfml/src/SFML/Window/Win32/: WglContext.cpp
ext/spriter/: CMakeLists.txt  Makefile
ext/steam/: CMakeLists.txt
inc/ai/: debug.hpp  dumbpuppet.hpp  graph.hpp  luaactor.hpp  node.hpp
inc/config/: audio.hpp  config.hpp  debug.hpp  display.hpp  nui.hpp  nuiguides.hpp  sound.hpp  windowinfo.hpp
inc/context/: command.hpp  commander.hpp  component.hpp  componententity.hpp  componententity.inl  componenter.hpp  context.hpp  cost.hpp  debug.hpp  event.hpp  logger.hpp  villains.hpp  wallet.hpp  worlds.hpp
inc/core/: application.hpp  cursor.hpp  debug.hpp  define.hpp.in  gettext.hpp  version.hpp.in  visualdebug.hpp
inc/dcb/: answerbox.hpp  answerline.hpp  bubble.hpp  controller.hpp  debug.hpp  gaugesmanager.hpp
inc/drawables/: animatedsprite.hpp  grid.hpp  line.hpp
inc/dungeon/: commandable.hpp  cost.hpp  costbanner.hpp  data.hpp  debug.hpp  detectentity.hpp  detector.hpp  effecter.hpp  element.hpp  elementdata.hpp  event.hpp  eventtype.hpp  facilities.hpp  facilitiesdb.hpp  facility.hpp  graph.hpp  hero.hpp  heroesmanager.hpp  inter.hpp  lock.hpp  log.hpp  minimap.hpp  monster.hpp  monstercage.hpp  monsters.hpp  monstersdb.hpp  movingelement.hpp  panel.hpp  sidebar.hpp  summary.hpp  tools.hpp  trap.hpp  trapdata.hpp  traps.hpp  trapsdb.hpp  villaindisplay.hpp
inc/game/: game.hpp
inc/hub/: monsterlocker.hpp  selector.hpp  traplocker.hpp
inc/interaction/: detectable.hpp  mousedetector.hpp
inc/nui/: button.hpp  checkbox.hpp  choicebox.hpp  colorselector.hpp  contextmenu.hpp  debug.hpp  dropdownlist.hpp  dropdownselector.hpp  entity.hpp  enums.hpp  form.hpp  frame.hpp  gauge.hpp  grabbutton.hpp  hstacker.hpp  imagebutton.hpp  list.hpp  mouseoverlay.hpp  numberentry.hpp  numberentry.inl  object.hpp  popdialog.hpp  progressivetext.hpp  progressivetext.inl  pushbutton.hpp  rangeselector.hpp  reactimage.hpp  rectangleshape.hpp  scrollarea.hpp  slider.hpp  spinbox.hpp  spinbox.inl  stacker.hpp  tabholder.hpp  tablelayout.hpp  text.hpp  textentry.hpp  tooltip.hpp  uicore.hpp  vstacker.hpp
inc/player/: player.hpp
inc/resources/: animationholder.hpp  holder.hpp  holder.inl  identifiers.hpp  musicplayer.hpp  soundplayer.hpp
inc/scene/: entity.hpp  entity.inl  grabbable.hpp  graph.hpp  layer.hpp  scene.hpp
inc/scml/: data.hpp  entityprototype.hpp  filesystemprototype.hpp  interface.hpp  transform.hpp
inc/sfe/: animatedsprite.hpp  arrow.hpp  beziercurve.hpp  gauge.hpp  grid.hpp  label.hpp  lerpable.hpp  line.hpp  localtransformable.hpp  rectanglegradient.hpp  rectangleshape.hpp  richtext.hpp  spline.hpp  sprite.hpp  sprite3d.hpp  twraptext.hpp  twraptext.inl  warptext.hpp  wraptext.hpp
inc/spriter/: examplefilefactory.hpp  exampleobjectfactory.hpp  pugixmlscmlloader.hpp  pugixmlspriterfileattributewrapper.hpp  pugixmlspriterfiledocumentwrapper.hpp  pugixmlspriterfileelementwrapper.hpp  sfmlboxinstanceinfo.hpp  sfmlimagefile.hpp  sfmlpointinstanceinfo.hpp  sfmlpointobjectinfo.hpp  sfmlsoundfile.hpp  sfmlsoundobjectinforeference.hpp  spriterfilefactory.hpp  spriterobjectfactory.hpp
inc/states/: identifiers.hpp  loading.hpp  quit.hpp  splashscreen.hpp  state.hpp  statestack.hpp  terminal.hpp
inc/tools/: debug.hpp  debug.hpp.in  event.hpp  event.inl  filesystem.hpp  filesystem.inl  int.hpp  math.hpp  math.inl  memorypool.hpp  memorypool.inl  metadata.hpp  param.hpp  platform-fixes.hpp  random.hpp  stack.hpp  string.hpp  string.inl  time.hpp  tools.hpp  vector.hpp  vector.inl
inc/world/: block.hpp  context.hpp  fractal.hpp  identifiers.hpp  world.hpp  worldsdata.hpp
res/ai/: hero.lua
res/epic_mod/: info.xml
res/font/: readme.txt
res/po/: eev.pot
res/scml/: default.scml  jumping-toasts.scml
res/shd/: default.frag
res/vanilla/: info.xml
saves/: villains.xml  worlds.xml
saves/big_bobby/: dungeon.xml
saves/example/: dungeon.xml
saves/richmanland/: dungeon.xml
saves/stupid_name/: dungeon.xml
scripts/: exit.eev  play_first.eev
src/ai/: dumbpuppet.cpp  graph.cpp  luaactor.cpp
src/config/: audio.cpp  display.cpp  nui.cpp  nuiguides.cpp  sound.cpp  windowinfo.cpp
src/context/: command.cpp  commander.cpp  componenter.cpp  context.cpp  event.cpp  (+3 more)
tests/: .hidden  CMakeLists.txt  debug-dungeon-name.cpp  test-dungeon-data.cpp  test-gettext.cpp  test-graph.cpp  test-string.cpp
tests/data/debug-dungeon-name/: dungeon.xml
tests/data/test-dungeon-data/: dungeon.xml
tests/data/test-graph/: dungeon.xml
worlds/: worlds.xml
(+633 files in other folders)
